--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,6 +33,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    aaptOptions {
+        cruncherEnabled = false
+    }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
